fixing bytecode-enhancement-dirty-checking